Saving before my computer crashes

--- a/contestform.html
+++ b/contestform.html
@@ -33,12 +33,12 @@
 	<h2>Participants in Database</h2>
 	<table class="table table-striped">	
 		<thead>
-			<th>Full Name</th><th>Email Address</th><th>Coupon Code</th>
+			<th>Full Name</th><th>Email Address</th><th>Coupon Code</th><th>Remove</th>
 		</thead>
 		<tbody>
 		{{#each participant}}
 		<tr class="participant">
-		<td>{{fullName}}</td><td>{{emailAddy}}</td><td>{{couponCode}}</td>
+		<td>{{fullName}}</td><td>{{emailAddy}}</td><td>{{couponCode}}</td><td><button class="btn btn-danger" id="removeParticipant">&times;</button></td>
 		</tr>
 		{{/each}}
 		</tbody>
