Form validation taken care of

--- a/contestform.html
+++ b/contestform.html
@@ -12,6 +12,7 @@
 	{{> contestForm}}
 
 	{{> printOut}}
+
 	</div>
 
 </body>
@@ -23,7 +24,8 @@
 		<button id="getIt" class="btn btn-primary btn-large">Get your coupon</button>
 	</div>
 	<div class="codeSuccess">
-		<h2>Success! Your coupon code is {{yourCode}}</h2>
+		<h2>Success! Your coupon code is:</h2>
+		<h1>{{yourCode}}</h1>
 		<p><em>Coupon code won't work on sale or clearance items.</em></p>
 	</div>
 </template>
