Lots of finishing touches
Figured out show/hide after code is inputted. Also added Iron Router to
make a /admin page

--- a/contestform.html
+++ b/contestform.html
@@ -3,55 +3,63 @@
 </head>
 
 <body>
-	<div class="container">
-	<div class="hero-unit">
- 	<h1>Meyer Friends &amp; Family Discount Contest</h1>
-		<p>Sign up for your <strong>40% off coupon code</strong> for <strong>PotsandPans.com</strong> and share it with your friends. You do the sharing and we'll do the bean counting. If you bring in the most sales you'll win a prize.</p>
-	</div>
-
-	{{> contestForm}}
-
-	{{> printOut}}
-
-	</div>
-
+	
 </body>
 
+<template name="Home">
+	<div class="container">
+		<div class="hero-unit">
+	 	<h1>Meyer Friends &amp; Family Discount Contest</h1>
+			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. If you bring in the most sales you'll win a prize.</p>
+
+		{{> contestForm}}
+	</div>
+	<div class="footer">
+			<a href="mailto:webservices@meyer.com">Built by Meyer Web Services</a>
+	</div>
+
+	</div>
+</template>
+
 <template name="contestForm">
-	<div class="contestInputs">
+	<div class="contestInputs {{formHide}}">
 		<input type="text" id="fullName" value="" placeholder="Full Name">
 		<input type="text" id="emailAddy" value="" placeholder="Email Address">
 		<button id="getIt" class="btn btn-primary btn-large">Get your coupon</button>
 	</div>
-	<div class="codeSuccess">
+	<div class="codeSuccess {{codeShow}}">
 		<h2>Success! Your coupon code is:</h2>
 		<h1>{{yourCode}}</h1>
-		<p><em>Coupon code won't work on sale or clearance items.</em></p>
+		<p><em>Code valid 11/24 - 12/10. Code won't work on sale or clearance items.</em></p>
 	</div>
 </template>
 
 <template name="printOut">
-	<div class="printOut">
-	<h2>Participants in Database</h2>
-	<table class="table table-striped">	
-		<thead>
-			<th>Full Name</th><th>Email Address</th><th>Coupon Code</th><th>Remove</th>
-		</thead>
-		<tbody>
-		{{#each participant}}
-		<tr class="participant">
-		<td>{{fullName}}</td><td>{{emailAddy}}</td><td>{{couponCode}}</td><td><button class="btn btn-danger" id="removeParticipant">&times;</button></td>
-		</tr>
-		{{/each}}
-		</tbody>
-	</table>
+	<div class="container">
+		<div class="printOut">
+		<h2>Participants in Database</h2>
+		<table class="table table-striped">	
+			<thead>
+				<th>Full Name</th><th>Email Address</th><th>Coupon Code</th><th>Remove</th>
+			</thead>
+			<tbody>
+			{{#each participant}}
+			<tr class="participant">
+			<td>{{fullName}}</td><td>{{emailAddy}}</td><td>{{couponCode}}</td><td><button class="btn btn-danger" id="removeParticipant">&times;</button></td>
+			</tr>
+			{{/each}}
+			</tbody>
+		</table>
 
-	<h2>Coupon Codes in Database</h2>
-	<ul>
-		{{#each couponCodes}}
-		<li class="couponCodes">{{code}}</li>
-		{{/each}}
-	</ul>
+		<h2>{{codeCount}} Coupon Codes in Database</h2>
+		<table class="table table-striped">	
+			<tbody>
+			{{#each couponCodes}}
+			<tr><td>{{code}}</td></tr>
+			{{/each}}
+			</tbody>
+		</table>	
+		</div>
 	</div>
 </template>
 
