--- a/contestform.html
+++ b/contestform.html
@@ -30,7 +30,8 @@
 	<div class="codeSuccess {{codeShow}}">
 		<h2>Success! Your coupon code is:</h2>
 		<h1>{{yourCode}}</h1>
-		<p><em>Code valid 11/24 - 12/10. Code won't work on sale or clearance items. You're competing against {{numberOfParticipants}} other people, go get 'em.</em></p>
+		<h2>You're competing against {{numberOfParticipants}} other people, go get 'em.</h2>
+		<p><em>Code valid 11/24 - 12/10. Code won't work on sale or clearance items.</em></p>
 	</div>
 </template>
 
