--- a/contestform.html
+++ b/contestform.html
@@ -31,7 +31,7 @@
 		<h2>Success! Your coupon code is:</h2>
 		<h1>{{yourCode}}</h1>
 		<h2>You're competing against {{numberOfParticipants}} other people, go get 'em.</h2>
-		<p><em>Code valid 11/24 - 12/10. Discount excludes sale and clearance items.</em></p>
+		<p><em>Code valid 11/24 - 12/10. Please keep it within your personal network and don't post your code publicly. Discount excludes sale and clearance items.</em></p>
 	</div>
 </template>
 
