--- a/contestform.html
+++ b/contestform.html
@@ -9,7 +9,7 @@
 <template name="Home">
 	<div class="container">
 		<div class="hero-unit">
-	 	<h1>Meyer Friends &amp; Family Discount Contest</h1>
+	 	<h1>Meyer Friends &amp; Family Holiday Contest</h1>
 			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. If you bring in the most sales you'll win a prize.</p>
 
 		{{> contestForm}}
