Revenue not sales

--- a/contestform.html
+++ b/contestform.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="hero-unit">
 	 	<h1>Meyer Friends &amp; Family Holiday Contest</h1>
-			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. If you bring in the most sales you'll win a prize.</p>
+			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. If you bring in the most revenue you'll win a prize.</p>
 
 		{{> contestForm}}
 	</div>
