Adding in image

--- a/contestform.html
+++ b/contestform.html
@@ -10,7 +10,8 @@
 	<div class="container">
 		<div class="hero-unit">
 	 	<h1>Meyer Friends &amp; Family Holiday Contest</h1>
-			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. If you bring in the most revenue you'll win a prize.</p>
+	 	<div style="width:630px;margin:auto;"><img src="http://img.potsandpans.com/yePNikPJbaZ_-GUPn-30lWfj5l8=/images/pots-and-pans/email/141124ff/141124ffmain02.jpg"></div>
+			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. If you bring in the most revenue` you'll win a prize.</p>
 
 		{{> contestForm}}
 	</div>
