--- a/contestform.html
+++ b/contestform.html
@@ -10,8 +10,8 @@
 	<div class="container">
 		<div class="hero-unit">
 	 	<h1>Meyer Friends &amp; Family Holiday Contest</h1>
-	 	<div style="width:630px;margin:auto;"><img src="http://img.potsandpans.com/yePNikPJbaZ_-GUPn-30lWfj5l8=/images/pots-and-pans/email/141124ff/141124ffmain02.jpg"></div>
-			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. If you bring in the most revenue` you'll win a prize.</p>
+	 	<div style="width:630px;margin:10px auto;"><img src="http://img.potsandpans.com/yePNikPJbaZ_-GUPn-30lWfj5l8=/images/pots-and-pans/email/141124ff/141124ffmain02.jpg"></div>
+			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. The three people that bring in the most revenue will win prizes!</p>
 
 		{{> contestForm}}
 	</div>
@@ -32,7 +32,8 @@
 		<h2>Success! Your coupon code is:</h2>
 		<h1>{{yourCode}}</h1>
 		<h2>You're competing against {{numberOfParticipants}} other people, go get 'em.</h2>
-		<p><em>Code valid 11/24 - 12/10. Please keep it within your personal network (no LinkedIn) and don't post your code publicly. Discount excludes sale and clearance items.</em></p>
+		<p><em>Code valid 11/24 - 12/10. Please keep it within your personal network (no LinkedIn) and don't post your code publicly. Contest eligibility is limited to Meyer US employees.  Only one coupon will be tallied per contestant. Winners will be determined after the coupon expiration date. Discount excludes sale and clearance items. Good luck!</em></p>
+		<p>If you have any questions about this contest please contact <a target="_new" href="mailto:webservices@meyer.com">webservices@meyer.com</a></p>
 	</div>
 </template>
 
