--- a/contestform.html
+++ b/contestform.html
@@ -12,8 +12,13 @@
 	 	<h1>Meyer Friends &amp; Family Holiday Contest</h1>
 	 	<div style="width:630px;margin:10px auto;"><img src="http://img.potsandpans.com/yePNikPJbaZ_-GUPn-30lWfj5l8=/images/pots-and-pans/email/141124ff/141124ffmain02.jpg"></div>
 			<p>Sign up for your <strong>PotsandPans.com 40% off coupon code</strong> and share it with your friends. You do the sharing and we'll do the bean counting. The three people that bring in the most revenue will win prizes!</p>
-
+			<ul style="margin-top:15px;margin-bottom:25px;">
+			<li>1st Prize: $250 Wayfair.com gift card</li>
+			<li>2nd Prize: $100 Wayfair.com gift card <strong>AND</strong> $100 Cooking.com gift card</li>
+			<li>3rd Prize: $100 Overstock.com gift card</li>
+			</ul>
 		{{> contestForm}}
+		
 	</div>
 	<div class="footer">
 			<a target="_new" href="mailto:webservices@meyer.com">Built by Meyer Web Services</a>
