Contest is over

--- a/contestform.html
+++ b/contestform.html
@@ -5,8 +5,16 @@
 <body>
 	
 </body>
-
 <template name="Home">
+	<div class="container">
+		<div class="hero-unit">
+	 	<h1>Meyer Friends &amp; Family Holiday Contest</h1>
+	 	<div class="mainImage"><img class="img-responsive" src="http://img.potsandpans.com/yePNikPJbaZ_-GUPn-30lWfj5l8=/images/pots-and-pans/email/141124ff/141124ffmain02.jpg"></div>
+			<p>Thanks for playing, the contest has ended.</p>
+		</div>
+		</div>
+</template>
+<template name="Over">
 	<div class="container">
 		<div class="hero-unit">
 	 	<h1>Meyer Friends &amp; Family Holiday Contest</h1>
